--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1350,7 +1350,7 @@ input, select, textarea {
 
 a {
     color: #0090c5;
-    text-decoration: underline;
+    text-decoration: none;
 }
 a:link {
     text-decoration: none;
@@ -1361,16 +1361,19 @@ a:visited {
 }
 
 a:hover {
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 a:active {
-    text-decoration: underline;
+    text-decoration: none;
 }                
 
 h1, h2, h3, h4, h5, h6 {
-    color: #444;
+    /*color: #444;*/
+    color: #7B2240;
+    text-align: center; 
     font-weight: 800;
+
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -1393,6 +1396,7 @@ h3 {
 b, strong {
     font-weight: 600;
     color: #444;
+    /*color: #7B2240;*/
 }
 
 i, em {
@@ -1417,7 +1421,11 @@ sup {
 
 hr {
     border: 0;
-    border-top: solid 1px #eee;
+    /*border-top: solid 1px #eee;*/
+    /*border-top: 1px dotted #8c8b8b;*/
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 blockquote {
@@ -1591,6 +1599,11 @@ table.default thead {
 .tg .tg-yw4l
 {
     text-align:left;
+    border: 1px solid #ddd;
+}
+
+.tg tr:hover {
+    background-color:#f5f5f5;
 }
 
 /* Image */
@@ -1673,7 +1686,8 @@ input[type="submit"]:hover,
 input[type="reset"]:hover,
 button:hover,
 .button:hover {
-    background: #10a0d5;
+    /*background: #10a0d5;*/
+    background: #7B2240;
 }
 
 input[type="button"]:active,
@@ -1886,8 +1900,8 @@ ol.default li {
 
 #main-wrapper {
     background: #fff;
-    box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.05);
-    padding: 5em 0 5em 0;
+    box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.05);
+    padding: 3em 0 3em 0;
 }
 
 #footer-wrapper {
@@ -1903,7 +1917,7 @@ ol.default li {
 /* Logo */
 
 #logo {
-    /*display: inline-block;*/
+    display: inline-block;
     padding: 2em 0 1em 0;
     position: relative;
 }
@@ -1924,9 +1938,9 @@ ol.default li {
 #logo span {
     font-weight: 800;
     font-family: 'Times New Roman', Times, serif;
-    line-height: 4em;
+    line-height: 2em;
     letter-spacing: 0.025em;
-    font-size: 2em;
+    font-size: 1.5em;
     vertical-align: middle;
     margin: 0 0 0 1.25em;
 }
@@ -2052,13 +2066,13 @@ ol.default li {
 /* Banner */
 
 /*#banner {
-	position: relative;
-	padding: 28px;
-	height: 212px;
-	width: 1124px;
-	margin: 28px 0 0 0;
-	background: #ffffff;
-	border-bottom: solid 1px #c0c0c0;
+        position: relative;
+        padding: 28px;
+        height: 212px;
+        width: 1124px;
+        margin: 28px 0 0 0;
+        background: #ffffff;
+        border-bottom: solid 1px #c0c0c0;
 }*/
 
 #banner {
@@ -2201,6 +2215,9 @@ ol.default li {
     ul.actions li:first-child {
         margin-top: 0;
     }
+
+
+
 
     /* Button */
 
@@ -2661,4 +2678,6 @@ ol.default li {
         text-align: left;
     }
 
+
 }
+
