--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1324,7 +1324,8 @@ body {
     background-size: 100% 30em, auto;
     font-family: 'Open Sans', sans-serif;
     font-size: 13pt;
-    color: #696969;
+    /*color: #696969;*/
+    color: #000000;
     font-weight: 300;
     line-height: 2.25em;
 }
@@ -1349,7 +1350,7 @@ input, select, textarea {
 }
 
 a {
-    color: #0090c5;
+    color: #000000;
     text-decoration: none;
 }
 a:link {
@@ -1361,6 +1362,7 @@ a:visited {
 }
 
 a:hover {
+    color: #7B2240;
     text-decoration: none;
 }
 
@@ -1369,8 +1371,8 @@ a:active {
 }                
 
 h1, h2, h3, h4, h5, h6 {
-    /*color: #444;*/
-    color: #7B2240;
+    color: #555;
+    /*color: #7B2240;*/
     text-align: center; 
     font-weight: 800;
 
@@ -1614,14 +1616,16 @@ table.default thead {
 }
 
 .image img {
-    display: block;
-    width: 100%;
+    /*display: block;*/
+    /*width: 100%;*/
+    text-align: center;
     border-radius: 8px;
 }
 
 .image.fit {
     display: block;
-    width: 100%;
+    text-align: center;
+    /*width: 100%;*/
 }
 
 .image.featured {
@@ -1687,7 +1691,7 @@ input[type="reset"]:hover,
 button:hover,
 .button:hover {
     /*background: #10a0d5;*/
-    background: #7B2240;
+    /*background: #7B2240;*/
 }
 
 input[type="button"]:active,
